# graphql-streaming-example-rs

./: Cargo.toml  README.md
graphql/: schema.graphql
graphql/subscriptions/: dextrades.graphql  dextrades_on_pumpfun.graphql
src/: main.rs  queries.rs
